<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#669900"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.example.translily.MainActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/lily"
        android:textColor="#FFF"
        android:textSize="30sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/senior_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:hint="@string/typein_name"
        android:textColor="#FFF" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/starting_point"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/from"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:hint="@string/starting_location"
        android:textColor="#FFF" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/destination_point"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:hint="@string/ending_location"
        android:textColor="#FFF" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/contact_info"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#FFF" 
        />



    <Button
        android:id="@+id/datePicker"
        android:layout_width="fill_parent"
        android:layout_marginRight="15sp"
         android:layout_marginLeft="15sp"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
         android:textColor="#FFF" 
        android:text="@string/pick_date" />

    <Button
        android:layout_marginTop="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="askForRide"
        android:text="@string/button_askride" 
        android:textColor="#FFF" 
        android:textSize="25sp"/>



</LinearLayout>