<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#669900"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.translily.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_filter_layout"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_filter_layout"
            android:orientation="horizontal"
            android:padding="5sp" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="filterSearchRide"
                android:text="@string/sort_rides"
                android:textColor="#FFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ask_ride_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@color/backgroundFrom"
                android:paddingBottom="0sp"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:paddingTop="0sp"
                android:text="@string/from"
                android:textColor="#FFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ask_ride_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="0dip"
                android:background="@color/backgroundFrom"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:text="@string/destination"
                android:textColor="#FFF"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/datePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/pick_date"
            android:textColor="#FFF" />
         <Button
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="filterSearches"
            android:text="@string/search_ride"
            android:textColor="#FFF" />
    </LinearLayout>

    <ListView
        android:id="@+id/ask_ride_lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>